# aisuite

./: .env.sample  .gitignore  Makefile  pyproject.toml
aisuite/: client.py  provider.py
aisuite-js/: README.md  package.json
aisuite-js/examples/: .env.example  basic-usage.ts  streaming.ts  test-suite.ts  tool-calling.ts
aisuite-js/src/: client.ts  index.ts
aisuite-js/src/core/: base-provider.ts  errors.ts  model-parser.ts
aisuite-js/src/providers/: index.ts
aisuite-js/src/providers/anthropic/: adapters.ts  index.ts  provider.ts  types.ts
aisuite-js/src/providers/openai/: adapters.ts  index.ts  provider.ts  types.ts
aisuite-js/src/types/: chat.ts  common.ts  index.ts  providers.ts  tools.ts
aisuite-js/src/utils/: streaming.ts
aisuite/framework/: chat_completion_response.py  message.py
aisuite/providers/: anthropic_provider.py  aws_provider.py  cerebras_provider.py  deepseek_provider.py  googlegenai_provider.py  inception_provider.py  message_converter.py  mistral_provider.py  ollama_provider.py
aisuite/utils/: utils.py
guides/: googlegenai.md
tests/client/: test_client.py  test_prerelease.py
tests/providers/: test_anthropic_converter.py  test_cerebras_provider.py  test_cohere_provider.py  test_deepseek_provider.py  test_googlegenai_provider.py  test_groq_provider.py  test_inception_provider.py  test_mistral_provider.py  test_openrouter_provider.py  test_sambanova_provider.py
